[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]~=4.1"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ['py36']
quiet = true

[tool.coverage]
    [tool.coverage.run]
    branch = true
    source = ["src"]

    [tool.coverage.report]
    exclude_lines = [
        # Exclude specific lines from coverage report.
        "# pragma: no cover",

        # Debug-only code.
        "def __repr__",

        # Defensive assertion code.
        "raise AssertionError",
        "raise NotImplementedError",
        "raise RuntimeError",
        "raise ValueError",

        # Not able to hit during testing.
        'if __name__ == "__main__":',

        # Unimplemented code.
        "pass",

        # Missing import code.
        "except ImportError",

        # Type-checking
        "TYPE_CHECKING",
    ]
    omit = ["src/nasty/__main__.py"]
    skip_covered = true
    skip_empty = true

    [tool.coverage.html]
    show_contexts = true

[tool.isort]
line_length = 88
multi_line_output = 3
force_grid_wrap = 0
include_trailing_comma = true
use_parentheses = true

[tools.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools_scm]
write_to = "src/nasty/_version.py"
write_to_template = "__version__ = \"{version}\"\n"
